test/parser/positive/PublicFields.java
public class PublicFields {
  public PublicFields() {}
  public int x;
}
