test/parser/negative/PackagePrivateFields.java
package dovs.joos.features;

public class PackagePrivateFields {
    public PackagePrivateFields(){}
  /* package private */ int x;
}
